# HackVoxel

./: .gitignore  CMakeLists.txt  MINECRAFT_FEATURES.md  README.md  build.bat  fib.cpp  index.html
docs/: PROJECT_SETUP.md
libs/glad/include/glad/: gl.h
src/: block_database.cpp  block_database.h  block_interaction.cpp  block_interaction.h  camera.cpp  camera.h  chunk_manager.cpp  chunk_manager.h  main.cpp  player.cpp  player.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture_atlas.cpp  texture_atlas.h  ui.cpp  ui.h  voxel_chunk.cpp  voxel_chunk.h  voxel_chunk_new.cpp  water_shader.cpp  water_shader.h
src/shaders/: particle.vert
